<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bitcoin RPC</string>
    <string name="action_settings">Settings</string>
    <string name="balance">Balance</string>
    <string name="transacciones">Ultimas Transacciones</string>
    <string name="title_activity_vprogresoa">Vprogreso</string>
    <string name="salidaTitulo">Exit</string>
    <string name="salida">¿Desea cerrar la aplicación?</string>
    <string name="numberTransacctions">Nº Transacciones</string>
    <string name="pass">Password</string>
    <string name="wait">Esperando Datos</string>
    <string name="waitplease">Espere Por Favor</string>
    <string name="fecha">Fecha</string>
    <string name="nombreServidor">Servidor</string>
    <string name="version">Version</string>
    <string name="conexiones">Conexiones</string>
    <string name="walletname">Wallet Name</string>
    <string name="bActualizar">Actualizar</string>
    <string name="direccionDonar">12dfk91BhndDvBioYbZan1Cy2WL795PLxc</string>
    <string name="lEnviar_a">Enviar a:</string>
    <string name="l_cantidad">Cantidad</string>
    <string name="l_comentario">Comentario</string>
    <string name="l_comentario_para">Comentario Para:</string>
    <string name="b_cancelar">Cancelar</string>
    <string name="b_enviar">Enviar</string>
    <string name="configSTR">Configuración</string>
    <string name="urlSTR">URL</string>
    <string name="userSTR">USER</string>
    <string name="savebuttonSTR">Guardar</string>
    <string name="camara">Scan QR</string>
	<string name="camaraScan">Scaneando &#8230;</string>
	<string name="error">Error</string>
	<string name="longDireccion">La longitud de la dirección es erronea.</string>
	<string name="sinrespuesta">Sin respuesta del Servidor.</string>
	<string name="gDatos">Configuración guardada.</string>
	<string name="aviso">Aviso</string>
	<string name="camaraNoDisponible">Camara no disponible</string>
    <string name="detener">Detener</string>
    <string name="no_camera_permission">Camara no disponible</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">low_storage_error</string>
    <string name="opciones">Opciones</string>
    <string name="txcount">txcount</string>


</resources>