<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camara"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:textStyle="normal|bold" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textoDialogo"
            android:layout_height="wrap_content"
            android:text="@string/lEnviar_a"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="left"
            android:layout_weight="0.3"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_height="wrap_content"
            android:minWidth="150dp"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            >
            
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_height="wrap_content"
            android:text="@string/l_cantidad"
            android:layout_gravity="left"
            android:layout_weight="0.3"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/editText4"

            android:layout_height="wrap_content"            
            android:inputType="numberDecimal"
            android:layout_weight="0.7"
            android:layout_width="0dp"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:text="@string/l_comentario"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="left"
            android:layout_weight="0.3"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:text="@string/l_comentario_para"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_gravity="left"
            android:layout_weight="0.3"
            android:layout_width="0dp"/>

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            />

    </TableRow>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:paddingTop="30dip"
            android:gravity="center">

            <Button
                android:id="@+id/cancelarEnvio"
                android:text="@string/b_cancelar"
                android:textSize="25sp"
                android:layout_weight="0.5"
                android:layout_width="0dp"/>

            <Button
                android:id="@+id/button2"
                android:text="@string/b_enviar"
                android:textSize="25sp"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                />

        </TableRow>

    </TableLayout>

</TableLayout>
